--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -22,7 +22,8 @@
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
 
 <!-- File ng-file-upload -->
-<script src="/lib/ngUpload/ng-upload.min.js"></script> 
+<script src="/lib/ng-file-upload/angular-file-upload.min.js"></script> 
+<!--<script src="/lib/ngUpload/ng-upload.min.js"></script> -->
 
 <!--Angular UI-->
 <script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
