--- a/app/views/includes/footFront.hbs
+++ b/app/views/includes/footFront.hbs
@@ -1,9 +1,11 @@
 <!--want to get rid of this later, but right now required:-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="/js/thirdparty/googleAnalytics.js"></script>
+<script type="text/javascript" src="/js/thirdparty/bootstrap.min.js"></script>
 <!--AngularJS-->
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
+
 <!--Angular UI-->
 <script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
