--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -15,15 +15,16 @@
                 <input type="file" file-model="myFile"/>
                 <button class="btn-glow success" ng-click="uploadFile()" ng-disabled="myFile==null">Upload Photo</button>
             </div>-->
-            <div ng-controller="uploadController">
+
+            <div ng-controller="uploadController" class="uploadClass">
                 <!--<input type="text" ng-model="myModelObj">
                 <input type="file" ng-file-select="onFileSelect($files)" >-->
-                <input type="file" ng-file-select="onFileSelect($files)" multiple>
-                <div ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class"
+                <!--<input class="btn" type="file" ng-file-select="onFileSelect($files)" multiple>-->
+                <div class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class"
                     ng-show="dropSupported">drop files here</div>
                 <div ng-file-drop-available="dropSupported=true" 
                     ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
-                <button ng-click="upload.abort()">Cancel Upload</button>
+                  <!--<a ng-click="upload.abort()">Cancel Upload</a>-->
             </div>
             <!--<div ng-controller="uploadController">
               <input type="text" ng-model="myModelObj">
@@ -38,3 +39,14 @@
         </div>
     </div>
 </div>
+<div class="gallery-wrapper">
+
+
+                    <!-- new image button -->
+                    <div class="col-md-3 new-img">
+                        <a href="#myModal" data-toggle="modal">
+                            <img alt="picture" class="img-responsive" src="img/new-gallery-img.png">
+                        </a>
+                    </div>                    
+                </div>
+            </div>
