--- a/app/views/pages/demo.hbs
+++ b/app/views/pages/demo.hbs
@@ -6,12 +6,12 @@
     <div class="col-sm-12">
       <div class="plan">
         <div class="wrapper">
-          <h1>Request Demo</h1>
+          <h3>Request a product demo.</h3>
           <br />
         <div class="features">
           <p>
          <h4>
-            We want to talk with you. Allow us to help streamline your sales and make your workflow easier and faster than ever.
+            Take a peek at what SolarMongo has to offer!
       </h4>
 <p></p>
 </div>
