--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -18,16 +18,16 @@
         </h2>
         <form role="form" method="post" action="sendContactEmail">
           <div class="form-group">
-            <input type="text" placeholder="Name" class="name form-control" name="firstName">
+            <input type="text" placeholder="Name" class="name form-control" name="firstName" required="">
           </div>  
           <div class="form-group">  
-            <input type="text" placeholder="Email" class="email form-control" name="email">
+            <input type="text" placeholder="Email" class="email form-control" name="email" required="">
           </div>  
           <div class="form-group">  
-            <input type="text" placeholder="Phone" class="phone form-control" name="phone">
+            <input type="text" placeholder="Phone" class="phone form-control" name="phone" required="">
           </div>  
           <div class="form-group">  
-            <input type="text" placeholder="Company" class="company form-control" name="companyName">
+            <input type="text" placeholder="Company" class="company form-control" name="companyName" required="">
           </div>
           <div class="form-group custombutton">
             
