--- a/app/views/pages/contact.hbs
+++ b/app/views/pages/contact.hbs
@@ -5,7 +5,7 @@
   <div class="row charts_wrapp">
     <div class="col-sm-12">
       <div class="plan">
-        <div class="wrapper">
+        <div class="wrapper contactdemo">
           <h3>Contact Us</h3>
           <br />
         <div class="features">
@@ -68,7 +68,7 @@
 </div>
 </div>
   <div class="footer">
-    <p>&copy; SolarMongo 2014</p>
+   
   </div>
 </div>
 </div>
