--- a/app/views/pages/pricing.hbs
+++ b/app/views/pages/pricing.hbs
@@ -140,31 +140,32 @@ Users
 </div>
 </div>
   <div class="footer">
-    <p>&copy; SolarMongo 2014</p>
+    
   </div>
 </div>
 <div id="faq">
 <div class="container">
-<div class="section_header">
+<div class="section_header" id="nomargin">
+
 <h3>Frequently asked questions</h3>
 </div>
 <div class="row">
 <div class="col-sm-6 block">
-<div class="box">
+<div class="feature2 box">
 <p class="title">How long are your contracts?</p>
 <p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
 </div>
-<div class="box">
+<div class="box feature2">
 <p class="title">How do I sign up?</p>
 <p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
 </div>
 </div>
 <div class="col-sm-6 block">
-<div class="box">
+<div class="box feature2">
 <p class="title">What is meant by unlimited?</p>
 <p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
 </div>
-<div class="box">
+<div class="box feature2">
 <p class="title">Is there a discount for yearly service?</p>
 <p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
 </div>
