--- a/public/css/views/pricing.css
+++ b/public/css/views/pricing.css
@@ -64,6 +64,7 @@
     color: #1189D9;
     font-size: 17px;
     margin-top: 16px;
+    text-align: center;
 }
 #in_pricing .charts_wrapp .plan .price span.dollar {
     font-size: 32px;
@@ -270,6 +271,7 @@
     font-size: 20px;
     font-style: italic;
     font-weight: normal;
+    text-align: center;
 }
 #in_pricing2 .black .plan p {
     color: #ADADAD;
