--- a/public/css/compiled/gallery.css
+++ b/public/css/compiled/gallery.css
@@ -1,11 +1,22 @@
+.dragImage{
+  background:url(/img/new-gallery-img.png) no-repeat;
+  width: 230px;
+  margin: auto;
+  height: 200px;
+}
+
 .uploadClass .drag_and_drop{
-  width:80%;
-  height:10%;
+  width:50%;
   background-color:#F6F8F9;
   height: 300px;
   margin: auto;
-  width: 100%;
+  width: 67%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px #edeff1;
+  border: 1px solid #edeff1;
+  cursor:pointer;
 }
+
 
 .gallery .gallery-wrapper {
   text-align: center;
@@ -66,9 +77,8 @@
 
 /* gallery blank state */
 .no-gallery {
-  border-top: 1px solid #edeff1;
-  padding-top: 40px;
-  box-shadow: 0px 4px 9px -6px rgba(0, 0, 0, 0.12) inset;
+  padding-top: 20px;
+  
   margin-bottom: 100px;
 }
 .no-gallery .center {
