--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -7,7 +7,7 @@
         </div>
         <div class="center">
             <img alt="no-gallery" src="img/no-img-gallery.png">
-            <h6>You don't have any photos</h6>
+            <h6>You don't have any photos {{lead}}</h6>
             <p>With the Basic plan you can upload up to 4 pictures per Site Survey.</p>
             <!-- TODO: make this a modal -->
             <!--<a class="btn-glow success" ng-click="uploadPhotoModal()">Add new image</a>-->
@@ -19,9 +19,18 @@
             <div ng-controller="uploadController" class="uploadClass">
                 <!--<input type="text" ng-model="myModelObj">
                 <input type="file" ng-file-select="onFileSelect($files)" >-->
-                <!--<input class="btn" type="file" ng-file-select="onFileSelect($files)" multiple>-->
-                <div class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class"
-                    ng-show="dropSupported">drop files here</div>
+                <input id="clickUpload" class="btn" type="file" ng-file-select="onFileSelect($files)" multiple>
+                <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
+                    <br />
+                    <div class="dragImage">
+                        
+                    </div>
+                    <!--<div class="dragDropDiv">
+                        <br/>
+                        <br />
+                        <p>Drag and Drop Photos</p>
+                    </div>-->
+                </div>
                 <div ng-file-drop-available="dropSupported=true" 
                     ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
                   <!--<a ng-click="upload.abort()">Cancel Upload</a>-->
@@ -39,14 +48,3 @@
         </div>
     </div>
 </div>
-<div class="gallery-wrapper">
-
-
-                    <!-- new image button -->
-                    <div class="col-md-3 new-img">
-                        <a href="#myModal" data-toggle="modal">
-                            <img alt="picture" class="img-responsive" src="img/new-gallery-img.png">
-                        </a>
-                    </div>                    
-                </div>
-            </div>
