--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -1,13 +1,54 @@
-<div class="gallery">
+<div class="gallery" data-ng-controller="PhotosController" data-ng-init="find()">
     <div class="no-gallery">
         <div class="row header">
             <div class="col-md-12">
                 <h3>Site Survey Photos</h3>
             </div>
         </div>
-        <div class="center">
+        <div class="gallery-wrapper">
+            <div class="row gallery-row">
+                <!-- single image -->
+                <div class="col-md-3 img-container" ng-repeat="photo in photos">
+                    <div class="img-box">
+                        <!--<span class="icon edit">
+                            <a href="#myModal" data-toggle="modal"><i class="gallery-edit"></i></a>
+                        </span>-->
+                        <span ng-click="remove(photo)" class="icon trash">
+                            <i class="gallery-trash"></i>
+                        </span>
+                        <img alt="picture" class="img-responsive" data-ng-src="https://s3.amazonaws.com/solarmongo/{{photo.path}}">
+                        <p class="title">
+                            {{photo._id}}
+                        </p>
+                    </div>
+                </div>
+                <!-- new image button -->
+                <div style="clear:both">
+                
+                <div ng-controller="uploadController" class="uploadClass">
+                <!--<input type="text" ng-model="myModelObj">
+                <input type="file" ng-file-select="onFileSelect($files)" >-->
+                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)" multiple>
+                <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
+                    <br />
+                    <div class="dragImage">
+                        
+                    </div>
+                    <!--<div class="dragDropDiv">
+                        <br/>
+                        <br />
+                        <p>Drag and Drop Photos</p>
+                    </div>-->
+                </div>
+                <div ng-file-drop-available="dropSupported=true" 
+                    ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
+                  <!--<a ng-click="upload.abort()">Cancel Upload</a>-->
+            </div>
+             </div>
+            </div>
+        <div class="center" ng-if="!photos">
             <img alt="no-gallery" src="img/no-img-gallery.png">
-            <h6>You don't have any photos {{lead}}</h6>
+            <h6>You don't have any photos</h6>
             <p>With the Basic plan you can upload up to 4 pictures per Site Survey.</p>
             <!-- TODO: make this a modal -->
             <!--<a class="btn-glow success" ng-click="uploadPhotoModal()">Add new image</a>-->
@@ -19,7 +60,7 @@
             <div ng-controller="uploadController" class="uploadClass">
                 <!--<input type="text" ng-model="myModelObj">
                 <input type="file" ng-file-select="onFileSelect($files)" >-->
-                <input id="clickUpload" class="btn" type="file" ng-file-select="onFileSelect($files)" multiple>
+                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)" multiple>
                 <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
                     <br />
                     <div class="dragImage">
