delete but not on amazon

--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -18,7 +18,7 @@
                         </span>
                         <img alt="picture" class="img-responsive" data-ng-src="https://s3.amazonaws.com/solarmongo/{{photo.path}}">
                         <p class="title">
-                            {{photo._id}}
+                            {{photo.name}}
                         </p>
                     </div>
                 </div>
