--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -28,7 +28,7 @@
                 <div ng-controller="uploadController" class="uploadClass">
                 <!--<input type="text" ng-model="myModelObj">
                 <input type="file" ng-file-select="onFileSelect($files)" >-->
-                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)" multiple>
+                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)">
                 <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
                     <br />
                     <div class="dragImage">
@@ -60,7 +60,8 @@
             <div ng-controller="uploadController" class="uploadClass">
                 <!--<input type="text" ng-model="myModelObj">
                 <input type="file" ng-file-select="onFileSelect($files)" >-->
-                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)" multiple>
+                <!--<input id="clickUpload" type="file" ng-file-select="onFileSelect($files)" multiple>-->
+                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)">
                 <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
                     <br />
                     <div class="dragImage">
