--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="/js/thirdparty/googleAnalytics.js"></script>
 
 <!-- File ng-file-upload SHIM-->
+
 <script src="/lib/ng-file-upload/angular-file-upload-shim.min.js"></script> 
 
 <!--AngularJS-->
@@ -54,6 +55,9 @@
 <!-- Uploader -->
 <script type="text/javascript" src="/js/uploader/service.js"></script>
 <script type="text/javascript" src="/js/uploader/controller.js"></script>
+
+<!--Q -->
+<script type="text/javascript" src="/lib/q/q.js"></script>
 
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
