--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -26,10 +26,8 @@
                 <div style="clear:both">
                 
                 <div ng-controller="uploadController" class="uploadClass">
-                <!--<input type="text" ng-model="myModelObj">
-                <input type="file" ng-file-select="onFileSelect($files)" >-->
-                <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)">
-                <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
+                    <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)" multiple>
+                    <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
                     <br />
                     <div class="dragImage">
                         
