--- a/public/views/settings/branding.html
+++ b/public/views/settings/branding.html
@@ -9,15 +9,49 @@
                             <h3>Company Details</h3>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-ng-controller="PhotosController" data-ng-init="findCompanyPhotos()">
                         <label class="col-md-1_5 control-label">Company Logo:</label>  
                         <div class="col-md-10">
-                            <img src="img/companyLogoHere.png" class="col-xs-8 col-md-8" alt="user" />
+                            <div ng-controller="uploadController" class="uploadClass">
+                                <input id="clickUpload" type="file" ng-file-select="onFileSelectBranding($files)">
+                                <div ng-show="!photos" ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelectBranding($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
+                                    <br />
+                                    <div class="dragImage"></div>
+                                </div>
+                                <div ng-file-drop-available="dropSupported=true" ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
+                            </div>
                         </div>
-                        <div class="col-md-11 field-box actions">
-                            <input type="submit" value="Upload File" class="btn-glow primary">
+                        <div class="col-md-12">
+                            <div class="gallery" style="text-align:center">
+                                <div class="gallery-wrapper">
+                                    <div class="row gallery-row">
+                                        <!-- single image -->
+                                        <div class="col-md-12 img-container" ng-repeat="photo in photos">
+                                            <div class="img-box">
+                                                <!--<span class="icon edit">
+                                                    <a href="#myModal" data-toggle="modal"><i class="gallery-edit"></i></a>
+                                                </span>-->
+                                                <span ng-click="remove(photo)" class="icon trash">
+                                                    <i class="gallery-trash"></i>
+                                                </span>
+                                                <img alt="picture" class="img-responsive" data-ng-src="https://s3.amazonaws.com/solarmongo/{{photo.path}}">
+                                                <p class="title">
+                                                    {{photo.name}}
+                                                </p>
+                                            </div>
+                                        </div>
+                                <!--<ul class="no-list">
+                                    <li ng-repeat="photo in photos">
+                                        <img alt="picture" class="img-responsive" data-ng-src="https://s3.amazonaws.com/solarmongo/{{photo.path}}">
+                                    </li>
+                                </ul>-->
+                                </div>
+                            </div>
                         </div>
                     </div>
+                </div>
+                    
+
                     <div class="form-group">
                         <label class="col-md-1_5 control-label">Company Name:</label>  
                         <div class="col-md-10">
@@ -65,62 +99,6 @@
                         <div class="col-md-4">
                           <input type="text" placeholder="State" class="form-control" data-ng-model="account.state">
                         </div>
-                        <!--<div id="state" class="ui-select col-md-4">
-                            <select data-ng-model="lead.state">
-                                <option value="">Select State</option>
-                                <option value="AL">Alabama</option> 
-                                <option value="AK">Alaska</option> 
-                                <option value="AZ">Arizona</option> 
-                                <option value="AR">Arkansas</option> 
-                                <option value="CA">California</option> 
-                                <option value="CO">Colorado</option> 
-                                <option value="CT">Connecticut</option> 
-                                <option value="DE">Delaware</option> 
-                                <option value="DC">District Of Columbia</option> 
-                                <option value="FL">Florida</option> 
-                                <option value="GA">Georgia</option> 
-                                <option value="HI">Hawaii</option> 
-                                <option value="ID">Idaho</option> 
-                                <option value="IL">Illinois</option> 
-                                <option value="IN">Indiana</option> 
-                                <option value="IA">Iowa</option> 
-                                <option value="KS">Kansas</option> 
-                                <option value="KY">Kentucky</option> 
-                                <option value="LA">Louisiana</option> 
-                                <option value="ME">Maine</option> 
-                                <option value="MD">Maryland</option> 
-                                <option value="MA">Massachusetts</option> 
-                                <option value="MI">Michigan</option> 
-                                <option value="MN">Minnesota</option> 
-                                <option value="MS">Mississippi</option> 
-                                <option value="MO">Missouri</option> 
-                                <option value="MT">Montana</option> 
-                                <option value="NE">Nebraska</option> 
-                                <option value="NV">Nevada</option> 
-                                <option value="NH">New Hampshire</option> 
-                                <option value="NJ">New Jersey</option> 
-                                <option value="NM">New Mexico</option> 
-                                <option value="NY">New York</option> 
-                                <option value="NC">North Carolina</option> 
-                                <option value="ND">North Dakota</option> 
-                                <option value="OH">Ohio</option> 
-                                <option value="OK">Oklahoma</option> 
-                                <option value="OR">Oregon</option> 
-                                <option value="PA">Pennsylvania</option> 
-                                <option value="RI">Rhode Island</option> 
-                                <option value="SC">South Carolina</option> 
-                                <option value="SD">South Dakota</option> 
-                                <option value="TN">Tennessee</option> 
-                                <option value="TX">Texas</option> 
-                                <option value="UT">Utah</option> 
-                                <option value="VT">Vermont</option> 
-                                <option value="VA">Virginia</option> 
-                                <option value="WA">Washington</option> 
-                                <option value="WV">West Virginia</option> 
-                                <option value="WI">Wisconsin</option> 
-                                <option value="WY">Wyoming</option>
-                            </select>
-                        </div>-->
                         <div class="col-md-3">
                             <input type="text" data-ng-model="account.zip" placeholder="Postal Code" class="form-control small-inline">
                         </div>
