--- a/public/views/leads/list.html
+++ b/public/views/leads/list.html
@@ -8,10 +8,13 @@
             <!-- styles are located in css/elements.css -->
             <!-- script that enables this dropdown is located in js/theme.js -->
             <div class="ui-dropdown">
-                <div data-original-title="Click me!" class="head" data-toggle="tooltip" title="">
+                <div ng-click="csvModal()" id="massImport" data-original-title="Click me!" class="head" data-toggle="tooltip" title="">
+                    Mass Import
+                </div>
+                <!--<div data-original-title="Click me!" class="head" data-toggle="tooltip" title="">
                     Filter users
                     <i class="arrow-down"></i>
-                </div>  
+                </div>-->
                 <div style="display: none;" class="dialog">
                     <div class="pointer">
                         <div class="arrow"></div>
