--- a/public/views/settings/branding.html
+++ b/public/views/settings/branding.html
@@ -14,11 +14,11 @@
                         <div class="col-md-10">
                             <div ng-controller="uploadController" class="uploadClass">
                                 <input id="clickUpload" type="file" ng-file-select="onFileSelectBranding($files)">
-                                <div ng-show="!photos" ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelectBranding($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
+                                <!--<div ng-show="!photos" ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelectBranding($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
                                     <br />
                                     <div class="dragImage"></div>
                                 </div>
-                                <div ng-file-drop-available="dropSupported=true" ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
+                                <div ng-file-drop-available="dropSupported=true" ng-show="!dropSupported">HTML5 Drop File is not supported!</div>-->
                             </div>
                         </div>
                         <div class="col-md-12">
