--- a/public/views/leads/view/gallery.html
+++ b/public/views/leads/view/gallery.html
@@ -28,15 +28,14 @@
                 <div ng-controller="uploadController" class="uploadClass">
                     <input id="clickUpload" type="file" ng-file-select="onFileSelect($files)">
                     <div ng-click="clickUpload()" class="drag_and_drop" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class" ng-show="dropSupported">
-                    <br />
-                    <div class="dragImage">
-                        
+                        <br />
+                        <div class="dragImage">
+                            
+                        </div>
+                    </div>
+                    <div ng-file-drop-available="dropSupported=true" ng-show="!dropSupported">HTML5 Drop File is not supported!
                     </div>
                 </div>
-                <div ng-file-drop-available="dropSupported=true" 
-                    ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
-                  <!--<a ng-click="upload.abort()">Cancel Upload</a>-->
-            </div>
              </div>
             </div>
         <div class="center" ng-if="!photos">
