--- a/public/css/compiled/leads.css
+++ b/public/css/compiled/leads.css
@@ -1,3 +1,12 @@
+.importkeys{
+  width:100%;
+  margin: 2px 0 0 0;
+}
+
+.bold{
+  font-weight: bold;
+}
+
 #massImport{
   padding:4px 15px 4px 12px
 }
