--- a/app/views/pages/demo.hbs
+++ b/app/views/pages/demo.hbs
@@ -17,7 +17,7 @@
 </div>
 <br />
 <br />
-<div class="row form-wrapper">
+<div id="contactrow" class="row form-wrapper">
           <div class="col-md-12">
             <form class="form-horizontal" role='form' action="sendContactEmail" method="post">
               <div class="form-group">
