date and home-owner

--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -59,6 +59,9 @@
 <!--Q -->
 <script type="text/javascript" src="/lib/q/q.js"></script>
 
+<!-- Date picker -->
+<script src="js/thirdparty/bootstrap.datepicker.js"></script>
+
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
 <script type="text/javascript">
