--- a/app/views/includes/head.hbs
+++ b/app/views/includes/head.hbs
@@ -39,6 +39,9 @@
   <link rel="stylesheet" href='/css/compiled/user-profile.css'/>
   <link rel="stylesheet" href='/css/compiled/user-list.css'/>
   <link rel="stylesheet" href="/css/compiled/icons.css"/>
-  <link rel="stylesheet" href="/css/compiled/gallery.css"/>    
+  <link rel="stylesheet" href="/css/compiled/gallery.css"/> 
+
+  <!-- Date picker css -->
+  <link href="css/lib/bootstrap.datepicker.css" type="text/css" rel="stylesheet" />   
 
 </head>
