--- a/public/views/leads/view/general.html
+++ b/public/views/leads/view/general.html
@@ -2,7 +2,6 @@
     <div class="row header">
         <div class="row form-wrapper">
             <div class="col-md-9 with-sidebar">
-                
                     <br>
                     <div class="form-group">
                         <div class="col-md-8">
@@ -157,6 +156,28 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <div class="col-md-1_5 control-label">
+                            <label>Date:</label>
+                        </div>
+                        <div class="col-md-5">
+                            <label>Set an Appointment Date with lead</label>
+                            <div class="field-box">
+                                <input type="text" class="form-control input-datepicker" ng-model="lead.appointmentDate" ng-patter="^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d$"/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-1_5 control-label">
+                            <label>Home:</label>    
+                        </div>
+                        <div class="col-md-5">
+                            <div class="middle-text">Is a home owner?</div>
+                            <div class="middle slider-frame primary" ng-click="lead.isHomeOwner = !lead.isHomeOwner">
+                                <span ng-class="{'on' : lead.isHomeOwner, '' : !lead.isHomeOwner}" class="slider-button off">{{lead.isHomeOwner && 'YES' || 'NO'}}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div class="col-md-1_5">
                             <label class="control-label">Notes:</label>
                         </div>
@@ -168,7 +189,7 @@
                     
 
             </div>
-            <div class="col-md-3 form-sidebar tag-sidebar">
+            <!--<div class="col-md-3 form-sidebar tag-sidebar">
                 <div class="btn-group toggle-inputs hidden-tablet">
                     <button class="glow left" data-input="inline">Tags</button>
                     <button class="glow right active" data-input="normal">More Tags</button>
@@ -185,7 +206,35 @@
                     <li><a href="#">Import from a CSV file</a></li>
                     <li><a href="#">Import from an Excel file</a></li>
                 </ul>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+        $(function () {
+
+function getISODateTime(d){
+    // padding function
+    var s = function(a,b){return(1e15+a+"").slice(-b)};
+
+    // default date parameter
+    if (typeof d === 'undefined'){
+        d = new Date();
+    };
+
+    // return ISO datetime
+    return d.getFullYear() + '-' +
+        s(d.getMonth()+1,2) + '-' +
+        s(d.getDate(),2) + ' ' +
+        s(d.getHours(),2) + ':' +
+        s(d.getMinutes(),2) + ':' +
+        s(d.getSeconds(),2);
+}
+            // datepicker plugin
+            $('.input-datepicker').datepicker().on('changeDate', function (ev) {
+                $(".datepicker").hide();
+                //$('.input-datepicker').datepicker('hide');
+            });
+        });
+    </script>
