--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -51,6 +51,7 @@
 <script type="text/javascript" src="/js/controllers/account.js"></script>
 <script type="text/javascript" src="/js/controllers/users.js"></script>
 <script type="text/javascript" src="/js/controllers/photos.js"></script>
+<script type="text/javascript" src="/js/controllers/datepicker.js"></script>
 
 <!-- Uploader -->
 <script type="text/javascript" src="/js/uploader/service.js"></script>
