--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -1,7 +1,7 @@
 
 <!--want to get rid of this later, but right now required:-->
 <!--script(type='text/javascript', src="/lib/jquery/jquery.min.js")-->
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="/js/thirdparty/jquery-ui-1.10.2.custom.min.js"></script>
 
 <script type="text/javascript" src="/js/thirdparty/bootstrap.min.js"></script>
@@ -63,7 +63,7 @@
 <!-- Date picker -->
 <script src="js/thirdparty/bootstrap.datepicker.js"></script>
 
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
 <script type="text/javascript">
 	window.role = "{{role}}";
