--- a/app/views/includes/footFront.hbs
+++ b/app/views/includes/footFront.hbs
@@ -1,5 +1,5 @@
 <!--want to get rid of this later, but right now required:-->
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="/js/thirdparty/googleAnalytics.js"></script>
 <script type="text/javascript" src="/js/thirdparty/bootstrap.min.js"></script>
 <!--AngularJS-->
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="/js/frontEndApp/global.js"></script>
 <!--Application Controllers-->
 <script type="text/javascript" src="/js/frontEndApp/slider.js"></script>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
 <!--Livereload script rendered-->
 {{#if isDevelopment}}
