--- a/app/views/includes/head.hbs
+++ b/app/views/includes/head.hbs
@@ -23,9 +23,9 @@
   <!--fonts-->
   <link rel="stylesheet" href="/css/lib/font-awesome.css"/>
   <!--open sans font-->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"/>
   <!--lato font-->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic"/>
 
   <link rel="stylesheet" href="/css/compiled/leads.css"/>
   <link rel="stylesheet" href="/css/compiled/elements.css"/>
