--- a/app/views/includes/headFront.hbs
+++ b/app/views/includes/headFront.hbs
@@ -18,8 +18,8 @@
   <link href="/css/bootstrap/bootstrap-overrides.css" rel="stylesheet">
   <link href="/css/lib/jquery-ui-1.10.2.custom.css" rel="stylesheet">
   <link href="/css/lib/font-awesome.css" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic" rel="stylesheet">
   <link href="/css/compiled/leads.css" rel="stylesheet">
   <link href="/css/compiled/elements.css" rel="stylesheet">
   <link href="/css/views/home.css" rel="stylesheet">
