--- a/app/views/includes/footer.hbs
+++ b/app/views/includes/footer.hbs
@@ -37,7 +37,11 @@
                 
                 <div class="row copyright">
                     <div class="col-md-12">
-                        &copy; 2014 SolarMongo. All rights reserved.
+                        <ul class="no-list footer_links">
+                            <li>&copy; 2014 SolarMongo. All rights reserved.</li>
+                            <li style="display:inline-block;"><a href="/privacy">Privacy Policy</a></li>
+                            <li style="display:inline-block;"><a href="/privacy">Privacy Policy</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>            
