--- a/app/views/includes/footer.hbs
+++ b/app/views/includes/footer.hbs
@@ -39,8 +39,8 @@
                     <div class="col-md-12">
                         <ul class="no-list footer_links">
                             <li>&copy; 2014 SolarMongo. All rights reserved.</li>
-                            <li style="display:inline-block;"><a href="/privacy">Privacy Policy</a></li>
-                            <li style="display:inline-block;"><a href="/privacy">Privacy Policy</a></li>
+                            <li class="footer_link"><a href="/privacy">Privacy Policy</a></li>
+                            <li class="footer_link"><a href="/contact">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
