--- a/public/css/views/footer.css
+++ b/public/css/views/footer.css
@@ -2,6 +2,10 @@
     list-style: none;
 }
 
+.footer_link{
+    display:inline-block; 
+    padding:0 5px;
+}
 .footer_links a{
     display:inline-block;
     
