changes to pricin page

--- a/app/views/includes/headFront.hbs
+++ b/app/views/includes/headFront.hbs
@@ -4,7 +4,7 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <title>{{title}}</title>
   <meta content="text/html;charset=UTF-8" http-equiv="Content-type">
-  <meta content="node.js, express, mongoose, mongodb, angularjs" name="keywords">
+  <meta content="solarmongo, solarmongo tools, solarmongo crm, solarmongo pricing, solarmongo login, solarmongo api, solarmongo contact, solarmongo software" name="keywords">
   <meta content="SolarMongo - A modern customer relationship management system for solar companies." name="description">
   <link type="image/x-icon" rel="shortcut icon" href="/img/icons/favicon.ico">
   <meta content="{{title}}" property="og:title">
