--- a/app/views/pages/pricing.hbs
+++ b/app/views/pages/pricing.hbs
@@ -153,21 +153,21 @@ Users
 <div class="col-sm-6 block">
 <div class="feature2 box">
 <p class="title">How long are your contracts?</p>
-<p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+<p class="answ"> There are no contacts with solarmongo.  Its a month to month plan.  You may cancel anytime for whatever reason.</p>
 </div>
 <div class="box feature2">
 <p class="title">How do I sign up?</p>
-<p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+<p class="answ"> Contact us for a demo and we will take care of your needs.</p>
 </div>
 </div>
 <div class="col-sm-6 block">
 <div class="box feature2">
 <p class="title">What is meant by unlimited?</p>
-<p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+<p class="answ"> We don't cap the amount of leads you can have with our system.</p>
 </div>
 <div class="box feature2">
 <p class="title">Is there a discount for yearly service?</p>
-<p class="answ"> There are many variations of passages of Lorem Ipsum available, but the randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text.</p>
+<p class="answ"> Yes, we will give you a discount for buying upfront for a year.</p>
 </div>
 </div>
 </div>
