--- a/public/views/frontEndViews/api/leads.html
+++ b/public/views/frontEndViews/api/leads.html
@@ -2,11 +2,11 @@
 <p>
 	Don't forget to pass in an access_token with every request
 	<ul>
-		<li>get: <b>/api/leads/alldata</b> - gets all leads with siteSurvey</li>
-		<li>get: <b>/api/leads</b> - gets all leads</li>
-    	<li>post <b>/api/leads</b> - adds a lead, pass in the lead object with a siteSurvey Object</li>
-    	<li>get <b>/api/leads/:leadId</b> - gets 1 lead, pass in the leadId, returns a lead object</li>
-    	<li>put <b>/api/leads/:leadId</b> - updates a lead, pass in the leadId and lead object</li>
+		<li>get: <b>/leads/alldata</b> - gets all leads with siteSurvey</li>
+		<li>get: <b>/leads</b> - gets all leads</li>
+    	<li>post <b>/leads</b> - adds a lead, pass in the lead object with a siteSurvey Object</li>
+    	<li>get <b>/leads/:leadId</b> - gets 1 lead, pass in the leadId, returns a lead object</li>
+    	<li>put <b>/leads/:leadId</b> - updates a lead, pass in the leadId and lead object</li>
     		<ul class="no-bullet">
     			<li>lead:{</li>
     				<ul>
@@ -84,6 +84,6 @@
     				</ul>
     			<li>}</li>
     		</ul>
-    	<li>del <b>/api/leads/:leadId</b> - deletes a lead, pass in the leadId</li>
+    	<li>del <b>/leads/:leadId</b> - deletes a lead, pass in the leadId</li>
     </ul>
 </p>
