--- a/public/views/frontEndViews/api/users.html
+++ b/public/views/frontEndViews/api/users.html
@@ -2,10 +2,10 @@
 <p>
 	Don't forget to pass in an access_token with every request
 	<ul>
-		<li>get: <b>/api/users</b> - gets all users</li>
-    	<li>post <b>/api/users</b> - adds a user, pass in a user object</li>
-    	<li>get <b>/api/users/:webUserId</b> - gets 1 user, pass in the userid, returns a user object</li>
-    	<li>put <b>/api/users/:webUserId</b> - updates a user, pass in the userid and user object</li>
+		<li>get: <b>/users</b> - gets all users</li>
+    	<li>post <b>/users</b> - adds a user, pass in a user object</li>
+    	<li>get <b>/users/:webUserId</b> - gets 1 user, pass in the userid, returns a user object</li>
+    	<li>put <b>/users/:webUserId</b> - updates a user, pass in the userid and user object</li>
     		<ul class="no-bullet">
     			<li>user:{</li>
     				<ul>
@@ -19,6 +19,6 @@
     			<li>}</li>
     		</ul>
     	</li>
-    	<li>del <b>/api/users/:webUserId</b> - deletes a user, pass in the userid</li>
+    	<li>del <b>/users/:webUserId</b> - deletes a user, pass in the userid</li>
     </ul>
 </p>
